[gd_scene load_steps=3 format=2]

[ext_resource path="res://topdown_shooter/player.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[node name="Player" type="Sprite"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 24, 24 )
color = Color( 0, 0.462745, 1, 1 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Hitbox" type="Area2D" parent="." groups=["Player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="PowerUpCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="PowerUpCooldown" to="." method="_on_PowerUpCooldown_timeout"]
